Fixed color contrast issue for tooltip background
… and gave in to my ocd for colors…

--- a/css/categories.css
+++ b/css/categories.css
@@ -5,9 +5,9 @@
 }
 
 .path__point--cat0 {
-    fill: #e51b4c;
-    stroke: #e51b4c;
-    color: #e51b4c;
+    fill: #e6194b;
+    stroke: #e6194b;
+    color: #e6194b;
 }
 
 .path__point--cat1 {
@@ -17,51 +17,51 @@
 }
 
 .path__point--cat2 {
-    fill: #fee10f;
-    stroke: #fee10f;
-    color: #fee10f;
+    fill: #ffe119;
+    stroke: #ffe119;
+    color: #ffe119;
 }
 
 .path__point--cat3 {
-    fill: #0c82c6;
-    stroke: #0c82c6;
-    color: #0c82c6;
+    fill: #0082c8;
+    stroke: #0082c8;
+    color: #0082c8;
 }
 
 .path__point--cat4 {
-    fill: #f58230;
-    stroke: #f58230;
-    color: #f58230;
+    fill: #f58231;
+    stroke: #f58231;
+    color: #f58231;
 }
 
 .path__point--cat5 {
-    fill: #863d97;
-    stroke: #863d97;
-    color: #863d97;
+    fill: #911eb4;
+    stroke: #911eb4;
+    color: #911eb4;
 }
 
 .path__point--cat6 {
-    fill: #74cdd8;
-    stroke: #74cdd8;
-    color: #74cdd8;
+    fill: #46f0f0;
+    stroke: #46f0f0;
+    color: #46f0f0;
 }
 
 .path__point--cat7 {
-    fill: #bb55a0;
-    stroke: #bb55a0;
-    color: #bb55a0;
+    fill: #f032e6;
+    stroke: #f032e6;
+    color: #f032e6;
 }
 
 .path__point--cat8 {
-    fill: #d0de42;
-    stroke: #d0de42;
-    color: #d0de42;
+    fill: #d2f53c;
+    stroke: #d2f53c;
+    color: #d2f53c;
 }
 
 .path__point--cat9 {
-    fill: #f9bebe;
-    stroke: #f9bebe;
-    color: #f9bebe;
+    fill: #fabebe;
+    stroke: #fabebe;
+    color: #fabebe;
 }
 
 .path__point--cat10 {
@@ -71,51 +71,51 @@
 }
 
 .path__point--cat11 {
-    fill: #d9bddb;
-    stroke: #d9bddb;
-    color: #d9bddb;
+    fill: #e6beff;
+    stroke: #e6beff;
+    color: #e6beff;
 }
 
 .path__point--cat12 {
-    fill: #aa6f29;
-    stroke: #aa6f29;
-    color: #aa6f29;
+    fill: #aa6e28;
+    stroke: #aa6e28;
+    color: #aa6e28;
 }
 
 .path__point--cat13 {
-    fill: #fef9ca;
-    stroke: #fef9ca;
-    color: #fef9ca;
+    fill: #fffac8;
+    stroke: #fffac8;
+    color: #fffac8;
 }
 
 .path__point--cat14 {
-    fill: #7f1416;
-    stroke: #7f1416;
-    color: #7f1416;
+    fill: #800000;
+    stroke: #800000;
+    color: #800000;
 }
 
 .path__point--cat15 {
-    fill: #b5dcb6;
-    stroke: #b5dcb6;
-    color: #b5dcb6;
+    fill: #aaffc3;
+    stroke: #aaffc3;
+    color: #aaffc3;
 }
 
 .path__point--cat16 {
-    fill: #7f8133;
-    stroke: #7f8133;
-    color: #7f8133;
+    fill: #808000;
+    stroke: #808000;
+    color: #808000;
 }
 
 .path__point--cat17 {
-    fill: #fed8b1;
-    stroke: #fed8b1;
-    color: #fed8b1;
+    fill: #ffd8b1;
+    stroke: #ffd8b1;
+    color: #ffd8b1;
 }
 
 .path__point--cat18 {
-    fill: #282973;
-    stroke: #282973;
-    color: #282973;
+    fill: #000080;
+    stroke: #000080;
+    color: #000080;
 }
 
 .path__point--cat19 {
